--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#b6fff6" />
+    <meta name="theme-color" content="#1bbaea" />
     <title>Quiz App</title>
 
     <!-- Font Awesome -->
