--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1bbaea" />
     <title>Quiz App</title>
-
-    <!-- Font Awesome -->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
     <link rel="manifest" href="./favicon/site.webmanifest" />
-
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -19,7 +17,6 @@
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
-
     <!-- Animate.css -->
     <link
       rel="stylesheet"
